# bunching-reports

./: .gitignore  README.md  bunchie.ipynb  bunchie_methods.txt  bunchie_noload.ipynb  bus2train.py  draw_reports.py  gen_reports.py  gtfs_archive.py  gtfs_utils.py  pokey.ipynb  pokey_methods.txt  pyproject.toml  seabornfig2grid.py  shape_distances.txt  work_in_progress.ipynb
