[tool.poetry]
name = "bunching-reports"
version = "0.1.0"
description = ""
authors = ["Austin Paul <austinjpaul@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bunching_reports"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
numpy = "^1.24.1"
seaborn = "^0.12.2"
matplotlib = "^3.6.3"
fpdf = "^1.7.2"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
